# cpp_projects

./: Aggiungi nodo lista.cpp  CMakeLists.txt  Caricamento e stampa lista.cpp  Ordinamento lista.cpp  README.md  Raddoppia elementi dispari.cpp  Ricerca minimo e massimo.cpp  Ricorsione completo.cpp  Stampa carattere 'A' in file.txt.cpp  Successione di Fibonacci.cpp  add_element_end_list.cpp  change_2_values.cpp  compare_string.cpp  dade_game.cpp  factorial.cpp  helloworld.cpp  load_print_list.cpp  max_min_search.cpp  max_min_value.cpp  occurrence_search.cpp  pair_dispair_calculate.cpp  phonebook.cpp  pow.cpp  print_for_value_address.cpp  recursive_pow.cpp  scientific_calculator.cpp  sum.cpp  supermarket_checkout
Esercizi Vari/: Battaglia Navale.cpp  Calcolatrice Scientifica.cpp  Cassa Supermercato.cpp  Generatore numeri casuali (srand).cpp  Gioco LanciaDadi.cpp  Gioco1 - Indovina il numero.cpp  Gioco2 - Indovina la parola.cpp  Parchimetro.cpp  Rubrica Telefonica.cpp  Scelta mese.cpp
File di testo/: Ricerca carattere in file.txt.cpp  Stampa carattere 'A' in file.txt.cpp  Stampa carattere 'A' per 26 volte a schermo e sequenza di lettere in file.txt.cpp  Stampa e lettura 'abcdefghijlmnopqrstuvzwx' in file.txt.cpp
Funzioni math.h/: Calcolatrice scientifica.cpp  Calcolo PariDispari.cpp  Cubo di un numero.cpp  Differenza.cpp  Fattoriale di numero.cpp  Potenza.cpp  Prodotto.cpp  Quadrato di un numero.cpp  Quoziente.cpp  Somma.cpp
Liste con puntatore/: Aggiungi in coda lista.cpp  Aggiungi nodo lista.cpp  Cancella nodo.cpp  Caricamento e stampa lista.cpp  Caricamento-stampa lista.cpp  Liste completo.cpp  Ordinamento lista.cpp  Raddoppia elementi dispari.cpp  Raddoppia elementi lista.cpp  Raddoppia elementi pari.cpp  Ricerca elemento lista.cpp  Ricerca massimo e minimo elemento.cpp  Ricerca ottimizzata lista.cpp  Scambio 2-3 nodo lista.cpp  Scambio 3-7 nodo lista.cpp  Scambio nodi.cpp  Scambio primo-ultimo nodo lista.cpp  Somma e media elementi lista.cpp  Sostituizione nodo lista.cpp  Verifica lista ordinata.cpp
Matrici/: Calcolo diagonale principale.cpp  Caricamento e stampa matrice.cpp  Matrice trasposta.cpp  Ordinamento matrice (Bubble sort).cpp  Ricerca minimo e massimo.cpp  Ricerca ottimizzata.cpp  Scambio righe-colonne.cpp  Somma e media elementi matrice.cpp
Puntatori/: CalcolatriceScientifica (puntatori).cpp  Puntatori.cpp  Scambio 2 valori.cpp  Stampa per valore valore ed indirizzo.cpp
Ricorsione/: Fattoriale.cpp  (+7 more)
(+108 files in other folders)
